--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
     - PYTHONPATH=/home/travis/build/gcallah/Scheduler
 
 script:
-    - scheduler/tests.py
+    - python scheduler/tests.py
 
 notifications:
   slack: nyuscheduler:OjE5yRLUjVvk0yQscXyJ1E1p
