--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ python:
 
 services:
     - docker
-
+# command to install dependencies
 install:
+    - pip install -r /scheduler/docker/requirement-dev.txt
 
-script:
+script: pytest
 
