--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ services:
 install:
     - pip install -r scheduler/docker/requirement-dev.txt
 
-script: pytest
+script: python scheduler/tests/test_cspsolver.py
 
